force-app/main/default/objects/ucinn_portal_Search_Filter_Cache__c/ucinn_portal_Search_Filter_Cache__c.object-meta.xml
<CustomObject>
    <label>Search Filter Cache</label>
    <nameField>
        <label>Search Filter Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Filter Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>