force-app/main/default/objects/ucinn_portal_Search_Filter_Cache__c/fields/Cache_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Cache_API_Name__c</fullName>
    <label>Cache API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>