force-app/main/default/objects/ucinn_portal_Search_Filter_Cache__c/fields/Contact_Id_Cache_11__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_Cache_11__c</fullName>
    <label>Contact Id Cache 11</label>
    <length>131062</length>
    <type>LongTextArea</type>
</CustomField>