force-app/main/default/objects/ucinn_portal_Search_Filter_Cache__c/fields/Filter_Value__c.field-meta.xml
<CustomField>
    <fullName>Filter_Value__c</fullName>
    <label>Filter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>