force-app/main/default/objects/ucinn_portal_Search_Filter_Cache__c/recordTypes/Directory.recordType-meta.xml
<RecordType>
    <fullName>Directory</fullName>
    <active>true</active>
    <label>Directory Cache</label>
</RecordType>