force-app/main/default/objects/ucinn_portal_Search_Filter_Cache__c/recordTypes/Newsletter_Filter.recordType-meta.xml
<RecordType>
    <fullName>Newsletter_Filter</fullName>
    <active>true</active>
    <label>Newsletter Filter</label>
</RecordType>